@@ -1,5 +1,8 @@
 # Default UQM input configuration file.
 
+# This is a VCONTROL version 1 config file (UQM 0.3 or later).
+version 1
+
 # Keyboard control definitions follow this point.  Most keys can be
 # described in a straightforward manner; consult the name table in
 # src/sc2code/libs/input/sdl/keynames.c for the names of unusual keys.
@@ -86,10 +89,12 @@ Exit: key F10
 Abort: key F12
 
 # This is a sample joystick configuration.  This is intended to work
-# primarily under WinXP with a USB analag/digital gamepad.  The
+# primarily under WinXP with a USB analog/digital gamepad.  The
 # digital aspect of the gamepad happens to present itself to the
 # system as a POV hat.  This configuration allows either the digital
-# or analog stick to be used simultaneously.
+# or analog stick to be used simultaneously.  More importantly, it
+# gives us a chance to give examples for all of the various input types
+# that UQM can handle.
 
 # joystick 0 threshold 10000   # How far to move before it counts; 0-30000
 # Menu-Left: joystick 0 axis 0 negative
